2007-10-01  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.h, NetTransport.cc: comment NetTransportMP,
	looks it useless; add trace for NetTransport [server part];

	* libstem: library version 4.6.4

2007-09-05  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Cron.h, NetTransport.h, EvManager.h: looks like non-POD return
	from thread is unstable, and should be avoided; replace union
	rec_code by void * or long, depends upon operation environment;

	* Cron.cc, NetTransport.cc, EvManager.cc, ut/unit_test.cc: idem.

2007-08-25  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.h, NetTransport.cc: use ostream and trace flags
	from EvManager for error reports instead of cerr;

	* libstem: library version 4.6.3

2007-08-23  Petr Ovtchenkov  <ptr@island.corbina.net>

	* NetTransport.h: inhibit copy of NetTransportMgr explicitly;

	* libstem: library version 4.6.2 (due to address for janus).

2007-08-17  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Event.h, EvManager.cc: add fixed address for janus
	[virtual synchrony dispatcher, janus subproject].

2007-08-03  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Makefile: let's try don't include boost's -I if macro
	not defined---mysterious behaviour otherwise happens;

	* Event.h, EvManager.cc, EvPack.cc: use TR1 type_traits technique;
	add tricks to compile without STLport;

	* EventHandler.h: remove STLport's macro;

	* ../../test/stem: moved to ut.

2007-07-27  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Event.h, EvManager.cc, EvPack.cc: operator of format output
	of gaddr_type is public now and situated in the EvPack.cc,
	declared in the Event.h in namespace std.

	* libstem: library version 4.6.1

2007-07-18  Petr Ovtchenkov  <ptr@island.corbina.net>

	* test/stem: boost unit test framework replaced by exam.

2007-07-12  Petr Ovtchenkov  <ptr@island.corbina.net>

	* libstem: library version 4.6.0

2007-07-11  Petr Ovtchenkov  <ptr@island.corbina.net>
